--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
-<ion-menu *ngIf="menus" [content]="content">
+<ion-menu *ngIf="menus" [content]="content" persistent="true" >
 
   <ion-header>
     <ion-toolbar>
