--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,12 +1,12 @@
 page-login {
   .form-content{
-    background-color: #4682B4
+    background-color: #b53d3d
   }
 
   .title{
     text-align: center;
     color: #FFF;
-    margin: 100px 0px 50px;
+    margin: 40px 0px 50px;
     font-size: 30px;
   }
 
