--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -6,7 +6,7 @@ page-login {
   .title{
     text-align: center;
     color: #FFF;
-    margin: 40px 0px 50px;
+    margin: 20px 0px 30px 0px;
     font-size: 30px;
   }
 
