--- a/src/app/app.html
+++ b/src/app/app.html
@@ -26,7 +26,7 @@
         <button ion-item menuToggle (click)="goToCategoryPosts(3,'第三章')">
             第三章
         </button>
-        <button ion-item menuToggle (click)="goToCategoryPosts(2,'插圖')">
+        <button ion-item menuToggle (click)="goToGallery(2,'插圖')">
             插圖
         </button>
         <button ion-item menuToggle (click)="goToCategoryPosts(9,'武功')">
