--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -19,3 +19,6 @@
 .content {
    /* margin-top: 54px; margin-bottom: 41px;*/
 }
+ion-header {
+    background: linear-gradient( transparent, #1a1c1e );
+}
