--- a/src/pages/categories/categories.scss
+++ b/src/pages/categories/categories.scss
@@ -1,37 +1,13 @@
 page-categories {
 
-  .categories-page {
-
-    ion-card {
-      position: relative;
-      text-align: right;
-
-    }
-    .card:after {
-      width:100%;height:100%; position:absolute; z-index:3; top:0; left:0;
-      background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,80));
+  ion-list ion-item {
+    ion-thumbnail {
+      margin:0!important;
     }
 
-  
-    .card-title {
-      position: absolute;
-      padding-right:15px;
-      bottom: 16%;
-      font-size: 2.0em;
-      width: 100%;
-      font-weight: bold;
-      color: #fff;
-      text-shadow: 0  4px 0 rgba(0,0,0,0.37);
-    }
-
-    .card-subtitle {
-      font-size: 1.2em;
-      position: absolute;
-      bottom: 4%;
-      padding-right:15px;
-      width: 100%;
-      color: #fff;
-      text-shadow: 0  4px 0 rgba(0,0,0,0.37);
+    .item-inner {
+      padding-left:16px;
     }
   }
+
 }
