--- a/src/pages/posts/posts.scss
+++ b/src/pages/posts/posts.scss
@@ -3,45 +3,41 @@ page-posts{
 
     ion-card.category-thumbnail {
 
-        height:150px;
+        height:280px;
         position: relative;
         text-align: right;
         transition: height .5s;
 
-        .card:after {
-            width:100%;height:100%; position:absolute; z-index:3; top:0; left:0;
-            background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,80));
-        }
+       
         
         
         .card-title {
             position: absolute;
             padding-right:15px;
-            bottom: 16%;
+            bottom: 8%;
             font-size: 2.0em;
             width: 100%;
             font-weight: bold;
             color: #fff;
+            padding: 6px 10px;
             text-shadow: 0  4px 0 rgba(0,0,0,0.37);
+            background-color: rgba(0,0,0,.4);
+        }
+
+        img {
+            position:relative; top:-50%;
+            transition: top .5s;
         }
         
-        .card-subtitle {
-            font-size: 1.2em;
-            position: absolute;
-            bottom: 4%;
-            padding-right:15px;
-            width: 100%;
-            color: #fff;
-            text-shadow: 0  4px 0 rgba(0,0,0,0.37);
-        }
-    
+       
     
     
     }
 
     .content {
-        margin-top:150px;
+        margin-top:290px;
         transition: height .5s;
+        margin-bottom:100px;
     }
 
     .content.down {
@@ -50,6 +46,9 @@ page-posts{
 
     ion-card.category-thumbnail.down {
         height:90px;
+        img {
+            position:relative; top:-150%;
+        }
     }
 }
   
