--- a/src/pages/categories/categories.scss
+++ b/src/pages/categories/categories.scss
@@ -7,6 +7,12 @@ page-categories {
 
     .item-inner {
       padding-left:16px;
+      h2 {
+        font-size:2.0rem;
+      }
+      p {
+        font-size:1.8rem;
+      }
     }
   }
 
