--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -65,6 +65,8 @@ $toolbar-ios-title-font-size: 2.0rem;
 $item-ios-thumbnail-size: 120px;
 $item-ios-padding-left: 0;
 $list-ios-header-font-size: 2.0rem;
+$toolbar-ios-title-font-size: 2.0rem;
+$toolbar-ios-padding: 6px;
 
 // App Material Design Variables
 // --------------------------------------------------
@@ -84,6 +86,8 @@ $card-md-padding-bottom:8px;
 $toolbar-md-title-font-size: 1.8rem;
 $item-md-thumbnail-size: 120px;
 $item-md-padding-left: 0;
+$toolbar-md-title-font-size: 2.0rem;
+$toolbar-md-padding: 6px;
 
 // App Windows Variables
 // --------------------------------------------------
@@ -104,6 +108,8 @@ $card-wp-header-font-size: 2.0rem;
 $toolbar-wp-title-font-size: 1.8rem;
 $item-wp-thumbnail-size: 120px;
 $item-wp-padding-left: 0;
+$toolbar-wp-title-font-size: 1.5rem;
+$toolbar-wp-padding: 6px;
 
 // App Theme
 // --------------------------------------------------
